Fixed left padding of menu items
menu, ol, ul > padding-left:0 by default by PicoCSS

--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -142,7 +142,7 @@
       </div>
 
       <h3 class="padding-top-4 padding-bottom-2">Hizmet Yaklaşımı</h3>
-      <ul class="padding-left-1">
+      <ul>
         <li><strong>Önce Güvenlik:</strong> İnsan güvenliği ana öncelik, ardından fiyat‑performans dengesi.</li>
         <li><strong>Referans Odaklı:</strong> Tüm projeler geçmiş müşteri memnuniyeti ile şekillenir.</li>
         <li><strong>Bölge:</strong> Seferihisar, Urla, Güzelbahçe, Yelki, Gümüldür ve çevresi (Çeşme hariç).</li>
@@ -150,7 +150,7 @@
     </section>
 
     <!-- -------------------------------------------------------------------- -->
-    <!-- GÜNCEL PROJELER ---------------------------------------------------- -->
+    <!-- GÜNCEL PROJELER - İZMİR -------------------------------------------- -->
     <!-- -------------------------------------------------------------------- -->
     <section class="container">
       <h2 class="padding-top-4 padding-bottom-2">İzmir Projeleri <small>(2023 &mdash; 2025)</small></h2>
@@ -196,13 +196,13 @@
     </section>
 
     <!-- -------------------------------------------------------------------- -->
-    <!-- ÖNCEKİ PROJELER (ACCORDION) --------------------------------------- -->
+    <!-- ÖNCEKİ PROJELER - İSTANBUL ----------------------------------------- -->
     <!-- -------------------------------------------------------------------- -->
-    <section class="container">
+    <section id="istanbul-projeleri" class="container">
       <h2 class="padding-top-4 padding-bottom-2">İstanbul Projeleri <small>(2008&nbsp;&ndash;&nbsp;2023)</small></h2>
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">Acar Yapı İnşaat İstanbul</summary>
-        <ul class="padding-left-2">
+        <ul>
           <li>Beykonakları, Beylikdüzü — 77 Daire</li>
           <li>LifePlus Şerifali, Ümraniye — 45 Daire</li>
           <li>Acar Plaza, Ümraniye — Ticari</li>
@@ -211,7 +211,7 @@
       </details>
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">ER‑AY Elektrik <small>(Kurucu Ortak, 2016‑2023)</small></summary>
-        <ul class="padding-left-2">
+        <ul>
           <li>Mavrova Residence, Küçükçekmece — 60 Daire + 4 Ticari</li>
           <li>Sarıgül Konakları — 48 Daire</li>
           <li>Ötüken Residence — 63 Daire</li>
@@ -219,7 +219,7 @@
       </details>
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">Kare Mimarlık &amp; Mühendislik</summary>
-        <ul class="padding-left-2">
+        <ul>
           <li>Address Güneşi, Güneşli — 80 Konut</li>
           <li>Koçak Konutları, Mahmutbey — 45 Konut</li>
         </ul>
