--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -142,7 +142,7 @@
       </div>
 
       <h3 class="padding-top-4 padding-bottom-2">Hizmet Yaklaşımı</h3>
-      <ul>
+      <ul id="hizmet-yaklasimi">
         <li><strong>Önce Güvenlik:</strong> İnsan güvenliği ana öncelik, ardından fiyat‑performans dengesi.</li>
         <li><strong>Referans Odaklı:</strong> Tüm projeler geçmiş müşteri memnuniyeti ile şekillenir.</li>
         <li><strong>Bölge:</strong> Seferihisar, Urla, Güzelbahçe, Yelki, Gümüldür ve çevresi (Çeşme hariç).</li>
@@ -202,7 +202,7 @@
       <h2 class="padding-top-4 padding-bottom-2">İstanbul Projeleri <small>(2008&nbsp;&ndash;&nbsp;2023)</small></h2>
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">Acar Yapı İnşaat İstanbul</summary>
-        <ul>
+        <ul id="istanbul-projeleri-1">
           <li>Beykonakları, Beylikdüzü — 77 Daire</li>
           <li>LifePlus Şerifali, Ümraniye — 45 Daire</li>
           <li>Acar Plaza, Ümraniye — Ticari</li>
@@ -211,15 +211,15 @@
       </details>
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">ER‑AY Elektrik <small>(Kurucu Ortak, 2016‑2023)</small></summary>
-        <ul>
+        <ul id="istanbul-projeleri-2">
           <li>Mavrova Residence, Küçükçekmece — 60 Daire + 4 Ticari</li>
           <li>Sarıgül Konakları — 48 Daire</li>
           <li>Ötüken Residence — 63 Daire</li>
-        </ul class="padding-left-1">
+        </ul>
       </details>
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">Kare Mimarlık &amp; Mühendislik</summary>
-        <ul>
+        <ul id="istanbul-projeleri-3">
           <li>Address Güneşi, Güneşli — 80 Konut</li>
           <li>Koçak Konutları, Mahmutbey — 45 Konut</li>
         </ul>
