Fixed: Table first column nowrap

--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -176,13 +176,13 @@
                   style="padding:0.25rem 0.5rem;border-radius:4px;">Yakın Zamanda Tamamlandı</span></td>
             </tr>
             <tr>
-              <td>Kablolu KNX Akıllı Ev Projesi</td>
+              <td class="nowrap">Kablolu KNX Akıllı Ev Projesi</td>
               <td>Urla Bademler, İzmir <br><small class="secondary nowrap">&mdash; Müstakil 4+1 Dubleks</small></td>
               <td><span class="pico-background-yellow-100 nowrap"
                   style="padding:0.25rem 0.5rem;border-radius:4px;">Şuanda Devam Ediyor</span></td>
             </tr>
             <tr>
-              <td>Ergün İnşaat</td>
+              <td class="nowrap"> class="nowrap"Ergün İnşaat</td>
               <td>Güzelbahçe Yelki, İzmir <br><small class="secondary nowrap">&mdash; 16 Konut + 2 Ticari, <br>&mdash;
                   Kablolu
                   KNX Tabanlı
