Major Update: Add Privacy Policy, Update Existing
modified: css/style.css, iletisim.html, index.html, yuksel-aykut.html
new file: gizlilik-politikasi.html

--- a/gizlilik-politikasi.html
+++ b/gizlilik-politikasi.html
@@ -8,8 +8,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Gizlilik Politikası - Seferihisar Elektrikçi Yüksel Aykut" />
   <meta name="description"
-    content="Acil ve hızlı servis, aydınlatma çözümleri, güvenlik kamerası kurulumu, akıllı ev uygulamaları ve daha fazlası için profesyonel elektrikçi hizmetleri." />
+    content="Kişisel verilerinizi hangi amaçlarla topladığımızı, nasıl koruduğumuzu ve haklarınızı ayrıntılı olarak öğrenmek için gizlilik politikamızı inceleyin." />
 
   <!-- -------------------------------------------------------------------- -->
   <!-- FAVICON -------------------------------------------------------------- -->
@@ -23,7 +24,7 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- TITLE -------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-  <title>İletişim - Seferihisar Elektrikçi Yüksel Aykut</title>
+  <title>Gizlilik Politikası - Seferihisar Elektrikçi Yüksel Aykut</title>
 
   <!-- -------------------------------------------------------------------- -->
   <!-- STATIC LIBRARIES --------------------------------------------------- -->
@@ -56,17 +57,18 @@
       <details class="dropdown">
         <summary role="button" class="primary nowrap">MENÜ</summary>
         <ul dir="rtl">
-          <li><a href="/" aria-current="page" class="secondary">Anasayfa</a></li>
+          <li><a href="/" class="secondary">Anasayfa</a></li>
           <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
           <li><a href="/#hizmet-bolgelerimiz" class="secondary">Hizmet Bölgelerimiz</a></li>
           <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
-          <li><a href="/iletisim" aria-current="page" class="secondary">İletişim</a></li>
+          <li><a href="/iletisim" class="secondary">İletişim</a></li>
         </ul>
       </details>
     </nav>
   </header>
 
   <main>
+
 
     <!-- -------------------------------------------------------------------- -->
     <!-- HERO SECTION ------------------------------------------------------- -->
@@ -75,30 +77,111 @@
       <article>
         <header>
           <div class="container padding-top-2 padding-bottom-1">
-            <h1>İletişim</h1>
+            <h1>Gizlilik Politikası</h1>
             <nav aria-label="breadcrumb">
               <ul>
                 <li><a href="/">Anasayfa</a></li>
-                <li>İletişim</li>
+                <li>Gizlilik Politikası</li>
               </ul>
             </nav>
           </div>
-          <p class="container padding-top-1"><em>Kablolu akıllı ev kurulumu uzmanlığı</em> başta olmak üzere her türlü
-            elektrikçi ihtiyaçlarınızda
-            Yüksel Aykut ile iletişime geçmek için aşağıdaki telefon ve mail adresini kullanabilirsiniz.</p>
         </header>
-        <div class="container padding-vertical-2">
-          <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Aykut - Akıllı Ev Sistemleri YouTube"
-            class="secondary" target="_blank">Yüksel Aykut YouTube</a>
-          <hr>
-          <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
-          <hr>
-          <a href="mailto:yukselaykut37@gmail.com" title="Email Adresi" class="secondary">yukselaykut37@gmail.com</a>
-          <hr>
-          <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
-          <hr>
-          <p>Çalışma Saatleri: 08<sup>00</sup> - 22<sup>00</sup></p>
+        <div class="container padding-top-1">
+          <p>Kişisel verilerinizi hangi amaçlarla topladığımızı, nasıl koruduğumuzu ve haklarınızı ayrıntılı olarak
+            öğrenmek için
+            gizlilik politikamızı inceleyin.</p>
+          <p>elektrikci-seferihisar.com.tr platformuna aktarılan kişisel verilerin korunması konusundaki temel bilgilere
+            aşağıda yer verilmiştir.
+            elektrikci-seferihisar.com.tr, 6698 sayılı Kişisel Verilerin Korunması Kanunu (“KVKK”) m. 10’dan doğan
+            aydınlatma yükümlülüğünü
+            yerine
+            getirmek amacıyla aşağıdaki açıklamaları müşterilerimizin ve web-sitemizi ve/veya mobil uygulamalarımızı
+            kullanan 3.
+            kişilerin dikkatine sunar. elektrikci-seferihisar.com.tr işbu Kişisel Verilerin Korunması Hakkında Açıklama
+            metnini
+            yürürlükteki
+            mevzuatta yapılabilecek değişiklikler çerçevesinde her zaman güncelleme hakkını saklı tutar.</p>
+          <h2 class="padding-vertical-2">elektrikci-seferihisar.com.tr kişisel verileri toplamasının yasal dayanağı
+            nedir?</h2>
+          <p>Müşterilerimizin kişisel verilerinin kullanılması konusunda çeşitli kanunlarda düzenlemeler bulunmaktadır.
+            En başta KVKK
+            ile kişisel verilerin korunması esasları belirlenmiştir. Ayrıca 6563 Sayılı Elektronik Ticaretin
+            Düzenlenmesi Hakkında
+            Kanun da kişisel verilerin korunmasına ilişkin hüküm içermektedir. 5237 Sayılı Türk Ceza Kanunu hükümleri
+            yoluyla da
+            kişisel verilerin korunması için bazı hallerde cezai yaptırımlar öngörülmüştür. Diğer yandan, 6502 sayılı
+            Tüketicinin
+            Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği’nden doğan yükümlülüklerimizin ifası amacıyla
+            verilerin
+            toplanması ve kullanılması gerekmektedir.</p>
+          <h2 class="padding-vertical-2">elektrikci-seferihisar.com.tr kişisel verilerinizi nasıl koruyor?</h2>
+          <p>elektrikci-seferihisar.com.tr ile paylaşılan kişisel veriler, elektrikci-seferihisar.com.tr gözetimi ve
+            kontrolü altındadır. elektrikci-seferihisar.com.tr
+            yürürlükteki
+            ilgili mevzuat hükümleri gereğince bilginin gizliliğinin ve bütünlüğünün korunması amacıyla gerekli
+            organizasyonu kurmak
+            ve teknik önlemleri almak ve uyarlamak konusunda veri sorumlusu sıfatıyla sorumluluğu üstlenmiştir.</p>
+          <h2 class="padding-vertical-2">elektrikci-seferihisar.com.tr kişisel verilerinizi paylaşıyor mu?</h2>
+          <p>Müşterilerimize ait kişisel verilerin üçüncü kişiler ile paylaşımı, müşterilerin izni çerçevesinde
+            gerçekleşmekte ve
+            kural olarak müşterimizin onayı olmaksızın kişisel verileri üçüncü kişilere aktarılmamaktadır. Bununla
+            birlikte, yasal
+            yükümlülüklerimiz nedeniyle ve bunlarla sınırlı olmak üzere mahkemeler ve diğer kamu kurumları ile kişisel
+            veriler
+            paylaşılmaktadır. Ayrıca, taahhüt ettiğimiz hizmetleri sağlayabilmek ve verilen hizmetlerin kalite
+            kontrolünü yapabilmek
+            için anlaşmalı üçüncü kişilere kişisel veri aktarımı yapılmaktadır. Üçüncü kişilere veri aktarımı sırasında
+            hak
+            ihlallerini önlemek için gerekli teknik ve hukuki önlemler alınmaktadır. Bununla birlikte, kişisel verileri
+            alan üçüncü
+            kişinin veri koruma politikalarından dolayı ve üçüncü kişinin sorumluluğundaki risk alanında meydana gelen
+            ihlallerden
+            elektrikci-seferihisar.com.tr sorumlu değildir. Kişisel verileriniz Jack Noah’ın hissedarlarıyla,
+            doğrudan/dolaylı
+            yurtiçi/yurtdışı
+            iştiraklerimize, faaliyetlerimizi yürütebilmek için işbirliği yaptığımız program ortağı kurum, kuruluşlarla,
+            verilerin
+            bulut ortamında saklanması hizmeti aldığımız yurtiçi/yurtdışı kişi ve kurumlarla, müşterilerimize ticari
+            elektronik
+            iletilerin gönderilmesi konusunda anlaşmalı olduğumuz yurtiçi/yurtdışındaki kuruluşlarla, Bankalararası Kart
+            Merkeziyle,
+            anlaşmalı olduğumuz bankalarla ve sizlere daha iyi hizmet sunabilmek ve müşteri memnuniyetini sağlayabilmek
+            için çeşitli
+            pazarlama faaliyetleri kapsamında yurtiçi ve yurtdışındaki çeşitli ajans, reklam şirketleri ve anket
+            şirketleriyle ve
+            yurtiçi/yurtdışı diğer üçüncü kişilerle ve ilgili iş ortaklarımızla paylaşılabilmektedir.</p>
+          <h2 class="padding-vertical-2">Kişisel Verilerin Korunması Kanunu'ndan doğan haklarınız nelerdir?</h2>
+          <p>KVKK uyarınca kişisel verilerinizin;</p>
+          <ol type="A" class="padding-vertical-2">
+            <li>İşlenip işlenmediğini öğrenme,</li>
+            <li>İşlenmişse bilgi talep etme,</li>
+            <li>İşlenme amacını ve amacına uygun kullanılıp kullanılmadığını öğrenme,</li>
+            <li>Yurt içinde / yurt dışında aktarıldığı üçüncü kişileri bilme,</li>
+            <li>Eksik veya yanlış işlenmişse düzeltilmesini isteme,</li>
+            <li>KVKK’nın 7. maddesinde öngörülen şartlar çerçevesinde silinmesini veya yok edilmesini isteme,</li>
+            <li>Aktarıldığı üçüncü kişilere yukarıda sayılan (D) ve (E) bentleri uyarınca yapılan işlemlerin
+              bildirilmesini
+              isteme,</li>
+            <li>Münhasıran otomatik sistemler ile analiz edilmesi nedeniyle aleyhinize bir sonucun ortaya çıkmasına
+              itiraz etme,
+            </li>
+            <li>KVKK’ya aykırı olarak işlenmesi sebebiyle zarara uğramanız hâlinde zararın giderilmesini talep etme.
+            </li>
+          </ol>
+          <p class="padding-bottom-2">Müşterilerimizin kişisel verilerinin kullanılması konusunda çeşitli kanunlarda
+            düzenlemeler bulunmaktadır.
+            En başta KVKK
+            ile kişisel verilerin korunması esasları belirlenmiştir. Ayrıca 6563 Sayılı Elektronik Ticaretin
+            Düzenlenmesi Hakkında
+            Kanun da kişisel verilerin korunmasına ilişkin hüküm içermektedir. 5237 Sayılı Türk Ceza Kanunu hükümleri
+            yoluyla da
+            kişisel verilerin korunması için bazı hallerde cezai yaptırımlar öngörülmüştür. Diğer yandan, 6502 sayılı
+            Tüketicinin
+            Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği’nden doğan yükümlülüklerimizin ifası amacıyla
+            verilerin
+            toplanması ve kullanılması gerekmektedir.</p>
         </div>
+
         <footer class="padding-vertical-2">
           <div class="container flex-direction-row gap-1">
             <button href="tel:05538665764" role="button"
@@ -179,7 +262,6 @@
         })();
       </script>
     </section>
-
   </main>
 
   <!-- -------------------------------------------------------------------- -->
