--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -44,22 +44,22 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- HEADER & NAVIGATION ------------------------------------------------ -->
   <!-- -------------------------------------------------------------------- -->
-  <header class="container">
-    <nav class="navbar-inline">
+  <header class="container navbar-inline">
 
-      <!-- Logo -->
-      <a href="/">
-        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg"
-          alt="Seferihisar Elektrikçi Yüksel Aykut Logo" height="90" width="240" class="logo" />
-      </a>
+    <!-- Logo -->
+    <a href="/">
+      <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Seferihisar Elektrikçi Logo"
+        height="90" width="240" class="logo" />
+    </a>
 
-      <!-- Header Menu -->
+    <!-- Header Menu Navigation -->
+    <nav>
       <details class="dropdown">
         <summary role="button" class="primary nowrap">MENÜ</summary>
         <ul dir="rtl">
           <li><a href="/" class="secondary">Anasayfa</a></li>
-          <li><a href="/yuksel-aykut" class="secondary" aria-current="page">Yüksel Aykut</a></li>
-          <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
+          <li><a href="/yuksel-aykut" aria-current="page" class="secondary">Yüksel Aykut</a></li>
+          <li><a href="/#hizmet-bolgelerimiz" class="secondary">Hizmet Bölgelerimiz</a></li>
           <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
           <li><a href="/iletisim" class="secondary">İletişim</a></li>
         </ul>
@@ -78,16 +78,50 @@
         <header>
           <div class="container padding-top-2 padding-bottom-1">
             <h1>Yüksel Aykut</h1>
+            <nav aria-label="breadcrumb">
+              <ul>
+                <li><a href="/">Anasayfa</a></li>
+                <li>Yüksel Aykut Hakkında</li>
+              </ul>
+            </nav>
           </div>
         </header>
-        <div class="container padding-top-1">
+        <div class="container padding-vertical-2">
           <p>Yaklaşık 26 yılı geride bırakmış bir elektrik iç tesisat uygulamacısı olarak hizmet vermekteyim. 2022'den
             beri İzmir'in Seferihisar ve çevre ilçelerinde faaliyet gösteriyorum.</p>
         </div>
 
-        <footer class="padding-vertical-1">
-          <div class="container"><a href="tel:05538665764" role="button" class="contrast">BİZİ ARAYIN</a>&nbsp;&nbsp;<a
-              href="https://wa.me/905538665764" role="button" class="pico-background-jade-500">WHATSAPP</a>
+        <footer class="padding-vertical-2">
+          <div class="container flex-direction-row gap-1">
+            <button href="tel:05538665764" role="button"
+              class="outline contrast flex-align-center flex-justify-center gap-05">
+              <svg id="Layer_1" height="36" viewBox="0 0 512 512" width="36" xmlns="http://www.w3.org/2000/svg"
+                data-name="Layer 1">
+                <g fill-rule="evenodd">
+                  <path
+                    d="m256.082.083c141.384 0 256 114.587 256 256.035 0 141.377-114.616 255.964-256 255.964s-255.999-114.582-255.999-255.964c0-141.448 114.623-256.035 255.999-256.035z"
+                    fill="#4caf50" />
+                  <path
+                    d="m278.669 172.38a61.111 61.111 0 0 1 61.116 61.12 7.813 7.813 0 0 0 15.625 0 76.767 76.767 0 0 0 -76.741-76.733 7.806 7.806 0 1 0 0 15.611zm-11.793 49.978a7.806 7.806 0 1 1 0-15.611 40.078 40.078 0 0 1 40.1 40.09 7.813 7.813 0 0 1 -15.625 0 24.47 24.47 0 0 0 -24.47-24.479zm50.824 193.142c-24.677-4.358-49.029-15.679-70.285-28.662-24.588-15.036-47.555-33.778-67.927-54.156s-39.122-43.33-54.158-67.941c-12.972-21.253-24.323-45.612-28.657-70.276a34.681 34.681 0 0 1 .915-16.575 35.048 35.048 0 0 1 8.726-14.057l32.548-32.539a8.137 8.137 0 0 1 11.469 0l58.469 58.457a8.159 8.159 0 0 1 0 11.477l-31.074 31.083a13.124 13.124 0 0 0 -1.415 16.964 372.693 372.693 0 0 0 39.978 46.614 370.12 370.12 0 0 0 46.611 39.972 13.09 13.09 0 0 0 16.952-1.407l31.1-31.08a8.02 8.02 0 0 1 5.72-2.364 8.139 8.139 0 0 1 5.749 2.364l58.462 58.46a8.156 8.156 0 0 1 0 11.474l-32.549 32.542a33.612 33.612 0 0 1 -30.634 9.65zm-39.031-303.809a7.8 7.8 0 1 1 0-15.607 137.408 137.408 0 0 1 137.415 137.416 7.813 7.813 0 0 1 -15.626 0 121.8 121.8 0 0 0 -121.789-121.809z"
+                    fill="#fff" />
+                </g>
+              </svg>
+              HEMEN ARA</button>
+            <button
+              href="https://wa.me/905538665764?text=Merhaba%2C%20size%20websitenizdeki%20Whatsapp%20butonuna%20t%C4%B1klayarak%20yaz%C4%B1yorum.%20Nas%C4%B1ls%C4%B1n%C4%B1z%3F"
+              role="button" class="pico-background-green-50 flex-align-center flex-justify-center gap-05">
+              <svg height="36" viewBox="0 0 256 256" width="36" xmlns="http://www.w3.org/2000/svg">
+                <g fill="none" stroke-miterlimit="10" stroke-width="0" transform="matrix(2.81 0 0 2.81 1.407 1.407)">
+                  <circle cx="45" cy="45" fill="#4bae4f" r="45" />
+                  <g fill="#fff">
+                    <path
+                      d="m22.608 69.5c-.527 0-1.041-.209-1.422-.594-.502-.508-.696-1.245-.507-1.935l2.949-10.77c-1.857-3.498-2.834-7.424-2.833-11.406.005-13.396 10.906-24.295 24.299-24.295 6.498.002 12.603 2.533 17.189 7.126 4.587 4.592 7.111 10.697 7.109 17.189-.005 13.398-10.905 24.298-24.299 24.298-3.79-.001-7.541-.892-10.906-2.583l-11.072 2.904c-.167.045-.338.066-.507.066zm11.821-7.101c.332 0 .662.083.958.244 2.961 1.615 6.314 2.469 9.699 2.47 11.197 0 20.302-9.106 20.307-20.3.002-5.424-2.107-10.524-5.939-14.36-3.832-3.837-8.932-5.951-14.36-5.953-11.188 0-20.293 9.105-20.298 20.298-.001 3.565.936 7.075 2.709 10.147.267.463.337 1.013.197 1.528l-2.249 8.213 8.47-2.222c.165-.043.336-.065.506-.065z" />
+                    <path
+                      d="m36.375 45.246c-.285-.38-2.325-3.088-2.325-5.891s1.471-4.181 1.993-4.751 1.139-.712 1.519-.712.76.004 1.092.02c.35.018.819-.133 1.281.978.475 1.14 1.613 3.944 1.756 4.229s.237.617.048.998c-.19.38-.285.617-.569.95-.285.333-.598.743-.855.998-.285.284-.582.592-.25 1.162s1.475 2.435 3.168 3.946c2.175 1.941 4.01 2.542 4.58 2.827.569.285.902.238 1.234-.143.332-.38 1.424-1.663 1.804-2.233s.759-.475 1.281-.285 3.322 1.568 3.891 1.853.949.428 1.092.665c.143.238.143 1.378-.332 2.708s-2.75 2.545-3.844 2.708c-.981.147-2.223.208-3.587-.226-.827-.262-1.888-.613-3.247-1.2-5.714-2.468-9.444-8.221-9.73-8.601z" />
+                  </g>
+                </g>
+              </svg>
+              WHATSAPP</button>
           </div>
         </footer>
       </article>
@@ -285,38 +319,49 @@
       </script>
     </section>
   </main>
-  <footer class="container flex-3">
-    <!-- -------------------------------------------------------------------- -->
-    <!-- FOOTER ------------------------------------------------------------- -->
-    <!-- -------------------------------------------------------------------- -->
+
+  <!-- -------------------------------------------------------------------- -->
+  <!-- FOOTER ------------------------------------------------------------- -->
+  <!-- -------------------------------------------------------------------- -->
+  <footer class="container flex-113 padding-top-4">
     <section>
-      <h2 class="padding-bottom-2">Seferihisar Elektrikçi Yüksel Aykut</h2>
       <a href="/">
-        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Seferihisar Elektrikçi Yüksel Logo"
-          height="90" width="240" />
+        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Seferihisar Elektrikçi Logo"
+          height="135" width="360" class="logo" />
       </a>
+      <h2 class="padding-top-4 padding-bottom-1"><mark>Seferihisar Elektrikçi</mark></h2>
+      <p>Seferihisar’da Elektrikçi Yüksel Aykut olarak önceliğim daima güvenilir ve kaliteli hizmet sunmak.</p>
+      <p>Teknolojiyi
+        yakından izleyen uzman anlayışımız ile, konutlardan işletmelere uzanan geniş bir yelpazede kapsamlı elektrik
+        çözümleri
+        sağlıyorum.</p>
+    </section>
+    <section id="footer-services">
+      <h3 class="padding-bottom-1">Hizmetlerimiz</h3>
+      <ul class="list-style-type-none list-itemsgap-1 padding-horizontal-0">
+        <li class="secondary">Elektrik İç Tesisat</li>
+        <li class="secondary">Klima Elektrik Hattı Çekimi</li>
+        <li class="secondary">Akıllı Ev Sistemleri Kurulumu</li>
+        <li class="secondary">Hırsız Alarm & Yangın İhbar</li>
+        <li class="secondary">Görüntüleme Sistemleri</li>
+        <li class="secondary">Avize Değişimi Montajı</li>
+        <li class="secondary">Network (DATA) Altyapı</li>
+        <li><a href="/#hizmetlerimiz" class="secondary">Tüm Hizmetlerimiz →</a></li>
+      </ul>
     </section>
     <section>
-      <p>Seferihisar’da Elektrikçi Yüksel Aykut olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak.
-      </p>
-      <p>
-        Teknolojiyi
-        yakından
-        izleyen uzman ekibimizle, konutlardan işletmelere uzanan geniş bir yelpazede kapsamlı elektrik çözümleri
-        sağlıyoruz.</p>
-    </section>
-    <section>
-      <hr>
-      <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Aykut - Akıllı Ev Sistemleri"
-        class="secondary" target="_blank">Yüksel Aykut YouTube</a>
-      <hr>
-      <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
-      <hr>
-      <a href="mailto:yukselaykut37@gmail.com" title="Email Adresi" class="secondary">yukselaykut37@gmail.com</a>
-      <hr>
-      <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
-      <hr>
-      <p>Çalışma Saatleri: 08<sup>00</sup> - 22<sup>00</sup></p>
+      <h3 class="padding-bottom-1">İletişim</h3>
+      <ul class="list-style-type-none list-itemsgap-2 padding-horizontal-0">
+        <li><a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Aykut - Akıllı Ev Sistemleri"
+            class="secondary" target="_blank">Yüksel Aykut YouTube</a></li>
+        <li><a href="tel:05538665764" title="Yüksel Aykut Telefon Numarası" class="secondary">+90 553 866 5764</a>
+        </li>
+        <li title="Yüksel Aykut Email Adresi">yukselaykut37@gmail.com</li>
+        <li>Çalışma Saatleri: 08<sup>00</sup> - 22<sup>00</sup></li>
+        <li>
+          <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
+        </li>
+      </ul>
     </section>
   </footer>
   <hr>
@@ -324,6 +369,11 @@
     <small>© <span id="year"></span>
       Seferihisar
       Elektrikçi Yüksel Aykut - Tüm hakları saklıdır</small>
+    <br>
+    <small class="flex-align-center flex-justify-center gap-1 padding-vertical-2">
+      <a href="/gizlilik-politikasi" class="secondary">Gizlilik Politikası</a>
+      <a href="/site-haritasi" class="secondary">Site Haritası</a>
+    </small>
   </div>
 
   <!-- -------------------------------------------------------------------- -->
@@ -331,7 +381,7 @@
   <!-- -------------------------------------------------------------------- -->
   <script src="js/main.js" defer></script>
   <!-- <script src="js/minimal-theme-switcher.js"></script>
-  <script src="js/modal.js"></script> -->
+    <script src="js/modal.js"></script> -->
 
 </body>
 
