Major Update: Refactor links and create sitemaps
Changes to be committed:
	deleted:    gizlilik-politikasi.html
	new file:   gizlilik.html
	modified:   iletisim.html
	modified:   index.html
	new file:   sitemap.html
	new file:   sitemap.xml
	modified:   yuksel-aykut.html

--- a/gizlilik.html
+++ b/gizlilik.html
@@ -8,8 +8,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Gizlilik Politikası - Seferihisar Elektrikçi Yüksel Aykut" />
   <meta name="description"
-    content="Acil ve hızlı servis, aydınlatma çözümleri, güvenlik kamerası kurulumu, akıllı ev uygulamaları ve daha fazlası için profesyonel elektrikçi hizmetleri." />
+    content="Kişisel verilerinizi hangi amaçlarla topladığımızı, nasıl koruduğumuzu ve haklarınızı ayrıntılı olarak öğrenmek için gizlilik politikamızı inceleyin." />
 
   <!-- -------------------------------------------------------------------- -->
   <!-- FAVICON -------------------------------------------------------------- -->
@@ -23,7 +24,7 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- TITLE -------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-  <title>İletişim - Seferihisar Elektrikçi Yüksel Aykut</title>
+  <title>Gizlilik Politikası - Seferihisar Elektrikçi Yüksel Aykut</title>
 
   <!-- -------------------------------------------------------------------- -->
   <!-- STATIC LIBRARIES --------------------------------------------------- -->
@@ -56,11 +57,11 @@
       <details class="dropdown">
         <summary role="button" class="primary nowrap">MENÜ</summary>
         <ul dir="rtl">
-          <li><a href="/" aria-current="page" class="secondary">Anasayfa</a></li>
+          <li><a href="/" class="secondary">Anasayfa</a></li>
           <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
           <li><a href="/#hizmet-bolgelerimiz" class="secondary">Hizmet Bölgelerimiz</a></li>
           <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
-          <li><a href="/iletisim" aria-current="page" class="secondary">İletişim</a></li>
+          <li><a href="/iletisim" class="secondary">İletişim</a></li>
         </ul>
       </details>
     </nav>
@@ -71,68 +72,114 @@
     <!-- -------------------------------------------------------------------- -->
     <!-- HERO SECTION ------------------------------------------------------- -->
     <!-- -------------------------------------------------------------------- -->
+
     <section>
-      <article>
-        <header>
-          <div class="container padding-top-2 padding-bottom-1">
-            <h1>İletişim</h1>
-            <nav aria-label="breadcrumb">
-              <ul>
-                <li><a href="/">Anasayfa</a></li>
-                <li>İletişim</li>
-              </ul>
-            </nav>
-          </div>
-          <p class="container padding-top-1"><em>Kablolu akıllı ev kurulumu uzmanlığı</em> başta olmak üzere her türlü
-            elektrikçi ihtiyaçlarınızda
-            Yüksel Aykut ile iletişime geçmek için aşağıdaki telefon ve mail adresini kullanabilirsiniz.</p>
-        </header>
+      <header>
         <div class="container padding-vertical-2">
-          <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Aykut - Akıllı Ev Sistemleri YouTube"
-            class="secondary" target="_blank">Yüksel Aykut YouTube</a>
-          <hr>
-          <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
-          <hr>
-          <a href="mailto:yukselaykut37@gmail.com" title="Email Adresi" class="secondary">yukselaykut37@gmail.com</a>
-          <hr>
-          <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
-          <hr>
-          <p>Çalışma Saatleri: 08<sup>00</sup> - 22<sup>00</sup></p>
+          <h1>Gizlilik Politikası</h1>
+          <nav aria-label="breadcrumb">
+            <ul>
+              <li><a href="/">Anasayfa</a></li>
+              <li>Gizlilik Politikası</li>
+            </ul>
+          </nav>
         </div>
-        <footer class="padding-vertical-2">
-          <div class="container flex-direction-row gap-1">
-            <button href="tel:05538665764" role="button"
-              class="outline contrast flex-align-center flex-justify-center gap-05">
-              <svg id="Layer_1" height="36" viewBox="0 0 512 512" width="36" xmlns="http://www.w3.org/2000/svg"
-                data-name="Layer 1">
-                <g fill-rule="evenodd">
-                  <path
-                    d="m256.082.083c141.384 0 256 114.587 256 256.035 0 141.377-114.616 255.964-256 255.964s-255.999-114.582-255.999-255.964c0-141.448 114.623-256.035 255.999-256.035z"
-                    fill="#4caf50" />
-                  <path
-                    d="m278.669 172.38a61.111 61.111 0 0 1 61.116 61.12 7.813 7.813 0 0 0 15.625 0 76.767 76.767 0 0 0 -76.741-76.733 7.806 7.806 0 1 0 0 15.611zm-11.793 49.978a7.806 7.806 0 1 1 0-15.611 40.078 40.078 0 0 1 40.1 40.09 7.813 7.813 0 0 1 -15.625 0 24.47 24.47 0 0 0 -24.47-24.479zm50.824 193.142c-24.677-4.358-49.029-15.679-70.285-28.662-24.588-15.036-47.555-33.778-67.927-54.156s-39.122-43.33-54.158-67.941c-12.972-21.253-24.323-45.612-28.657-70.276a34.681 34.681 0 0 1 .915-16.575 35.048 35.048 0 0 1 8.726-14.057l32.548-32.539a8.137 8.137 0 0 1 11.469 0l58.469 58.457a8.159 8.159 0 0 1 0 11.477l-31.074 31.083a13.124 13.124 0 0 0 -1.415 16.964 372.693 372.693 0 0 0 39.978 46.614 370.12 370.12 0 0 0 46.611 39.972 13.09 13.09 0 0 0 16.952-1.407l31.1-31.08a8.02 8.02 0 0 1 5.72-2.364 8.139 8.139 0 0 1 5.749 2.364l58.462 58.46a8.156 8.156 0 0 1 0 11.474l-32.549 32.542a33.612 33.612 0 0 1 -30.634 9.65zm-39.031-303.809a7.8 7.8 0 1 1 0-15.607 137.408 137.408 0 0 1 137.415 137.416 7.813 7.813 0 0 1 -15.626 0 121.8 121.8 0 0 0 -121.789-121.809z"
-                    fill="#fff" />
-                </g>
-              </svg>
-              HEMEN ARA</button>
-            <button
-              href="https://wa.me/905538665764?text=Merhaba%2C%20size%20websitenizdeki%20Whatsapp%20butonuna%20t%C4%B1klayarak%20yaz%C4%B1yorum.%20Nas%C4%B1ls%C4%B1n%C4%B1z%3F"
-              role="button" class="pico-background-green-50 flex-align-center flex-justify-center gap-05">
-              <svg height="36" viewBox="0 0 256 256" width="36" xmlns="http://www.w3.org/2000/svg">
-                <g fill="none" stroke-miterlimit="10" stroke-width="0" transform="matrix(2.81 0 0 2.81 1.407 1.407)">
-                  <circle cx="45" cy="45" fill="#4bae4f" r="45" />
-                  <g fill="#fff">
-                    <path
-                      d="m22.608 69.5c-.527 0-1.041-.209-1.422-.594-.502-.508-.696-1.245-.507-1.935l2.949-10.77c-1.857-3.498-2.834-7.424-2.833-11.406.005-13.396 10.906-24.295 24.299-24.295 6.498.002 12.603 2.533 17.189 7.126 4.587 4.592 7.111 10.697 7.109 17.189-.005 13.398-10.905 24.298-24.299 24.298-3.79-.001-7.541-.892-10.906-2.583l-11.072 2.904c-.167.045-.338.066-.507.066zm11.821-7.101c.332 0 .662.083.958.244 2.961 1.615 6.314 2.469 9.699 2.47 11.197 0 20.302-9.106 20.307-20.3.002-5.424-2.107-10.524-5.939-14.36-3.832-3.837-8.932-5.951-14.36-5.953-11.188 0-20.293 9.105-20.298 20.298-.001 3.565.936 7.075 2.709 10.147.267.463.337 1.013.197 1.528l-2.249 8.213 8.47-2.222c.165-.043.336-.065.506-.065z" />
-                    <path
-                      d="m36.375 45.246c-.285-.38-2.325-3.088-2.325-5.891s1.471-4.181 1.993-4.751 1.139-.712 1.519-.712.76.004 1.092.02c.35.018.819-.133 1.281.978.475 1.14 1.613 3.944 1.756 4.229s.237.617.048.998c-.19.38-.285.617-.569.95-.285.333-.598.743-.855.998-.285.284-.582.592-.25 1.162s1.475 2.435 3.168 3.946c2.175 1.941 4.01 2.542 4.58 2.827.569.285.902.238 1.234-.143.332-.38 1.424-1.663 1.804-2.233s.759-.475 1.281-.285 3.322 1.568 3.891 1.853.949.428 1.092.665c.143.238.143 1.378-.332 2.708s-2.75 2.545-3.844 2.708c-.981.147-2.223.208-3.587-.226-.827-.262-1.888-.613-3.247-1.2-5.714-2.468-9.444-8.221-9.73-8.601z" />
-                  </g>
-                </g>
-              </svg>
-              WHATSAPP</button>
-          </div>
-        </footer>
-      </article>
+      </header>
+      <div class="container padding-bottom-2">
+        <p>Kişisel verilerinizi hangi amaçlarla topladığımızı, nasıl koruduğumuzu ve haklarınızı ayrıntılı olarak
+          öğrenmek için
+          gizlilik politikamızı inceleyin.</p>
+        <p>elektrikci-seferihisar.com.tr platformuna aktarılan kişisel verilerin korunması konusundaki temel bilgilere
+          aşağıda yer verilmiştir.
+          elektrikci-seferihisar.com.tr, 6698 sayılı Kişisel Verilerin Korunması Kanunu (“KVKK”) m. 10’dan doğan
+          aydınlatma yükümlülüğünü
+          yerine
+          getirmek amacıyla aşağıdaki açıklamaları müşterilerimizin ve web-sitemizi ve/veya mobil uygulamalarımızı
+          kullanan 3.
+          kişilerin dikkatine sunar. elektrikci-seferihisar.com.tr işbu Kişisel Verilerin Korunması Hakkında Açıklama
+          metnini
+          yürürlükteki
+          mevzuatta yapılabilecek değişiklikler çerçevesinde her zaman güncelleme hakkını saklı tutar.</p>
+        <h2 class="padding-vertical-2">elektrikci-seferihisar.com.tr kişisel verileri toplamasının yasal dayanağı
+          nedir?</h2>
+        <p>Müşterilerimizin kişisel verilerinin kullanılması konusunda çeşitli kanunlarda düzenlemeler bulunmaktadır.
+          En başta KVKK
+          ile kişisel verilerin korunması esasları belirlenmiştir. Ayrıca 6563 Sayılı Elektronik Ticaretin
+          Düzenlenmesi Hakkında
+          Kanun da kişisel verilerin korunmasına ilişkin hüküm içermektedir. 5237 Sayılı Türk Ceza Kanunu hükümleri
+          yoluyla da
+          kişisel verilerin korunması için bazı hallerde cezai yaptırımlar öngörülmüştür. Diğer yandan, 6502 sayılı
+          Tüketicinin
+          Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği’nden doğan yükümlülüklerimizin ifası amacıyla
+          verilerin
+          toplanması ve kullanılması gerekmektedir.</p>
+        <h2 class="padding-vertical-2">elektrikci-seferihisar.com.tr kişisel verilerinizi nasıl koruyor?</h2>
+        <p>elektrikci-seferihisar.com.tr ile paylaşılan kişisel veriler, elektrikci-seferihisar.com.tr gözetimi ve
+          kontrolü altındadır. elektrikci-seferihisar.com.tr
+          yürürlükteki
+          ilgili mevzuat hükümleri gereğince bilginin gizliliğinin ve bütünlüğünün korunması amacıyla gerekli
+          organizasyonu kurmak
+          ve teknik önlemleri almak ve uyarlamak konusunda veri sorumlusu sıfatıyla sorumluluğu üstlenmiştir.</p>
+        <h2 class="padding-vertical-2">elektrikci-seferihisar.com.tr kişisel verilerinizi paylaşıyor mu?</h2>
+        <p>Müşterilerimize ait kişisel verilerin üçüncü kişiler ile paylaşımı, müşterilerin izni çerçevesinde
+          gerçekleşmekte ve
+          kural olarak müşterimizin onayı olmaksızın kişisel verileri üçüncü kişilere aktarılmamaktadır. Bununla
+          birlikte, yasal
+          yükümlülüklerimiz nedeniyle ve bunlarla sınırlı olmak üzere mahkemeler ve diğer kamu kurumları ile kişisel
+          veriler
+          paylaşılmaktadır. Ayrıca, taahhüt ettiğimiz hizmetleri sağlayabilmek ve verilen hizmetlerin kalite
+          kontrolünü yapabilmek
+          için anlaşmalı üçüncü kişilere kişisel veri aktarımı yapılmaktadır. Üçüncü kişilere veri aktarımı sırasında
+          hak
+          ihlallerini önlemek için gerekli teknik ve hukuki önlemler alınmaktadır. Bununla birlikte, kişisel verileri
+          alan üçüncü
+          kişinin veri koruma politikalarından dolayı ve üçüncü kişinin sorumluluğundaki risk alanında meydana gelen
+          ihlallerden
+          elektrikci-seferihisar.com.tr sorumlu değildir. Kişisel verileriniz Jack Noah’ın hissedarlarıyla,
+          doğrudan/dolaylı
+          yurtiçi/yurtdışı
+          iştiraklerimize, faaliyetlerimizi yürütebilmek için işbirliği yaptığımız program ortağı kurum, kuruluşlarla,
+          verilerin
+          bulut ortamında saklanması hizmeti aldığımız yurtiçi/yurtdışı kişi ve kurumlarla, müşterilerimize ticari
+          elektronik
+          iletilerin gönderilmesi konusunda anlaşmalı olduğumuz yurtiçi/yurtdışındaki kuruluşlarla, Bankalararası Kart
+          Merkeziyle,
+          anlaşmalı olduğumuz bankalarla ve sizlere daha iyi hizmet sunabilmek ve müşteri memnuniyetini sağlayabilmek
+          için çeşitli
+          pazarlama faaliyetleri kapsamında yurtiçi ve yurtdışındaki çeşitli ajans, reklam şirketleri ve anket
+          şirketleriyle ve
+          yurtiçi/yurtdışı diğer üçüncü kişilerle ve ilgili iş ortaklarımızla paylaşılabilmektedir.</p>
+        <h2 class="padding-vertical-2">Kişisel Verilerin Korunması Kanunu'ndan doğan haklarınız nelerdir?</h2>
+        <p>KVKK uyarınca kişisel verilerinizin;</p>
+        <ol type="A" class="padding-vertical-2">
+          <li>İşlenip işlenmediğini öğrenme,</li>
+          <li>İşlenmişse bilgi talep etme,</li>
+          <li>İşlenme amacını ve amacına uygun kullanılıp kullanılmadığını öğrenme,</li>
+          <li>Yurt içinde / yurt dışında aktarıldığı üçüncü kişileri bilme,</li>
+          <li>Eksik veya yanlış işlenmişse düzeltilmesini isteme,</li>
+          <li>KVKK’nın 7. maddesinde öngörülen şartlar çerçevesinde silinmesini veya yok edilmesini isteme,</li>
+          <li>Aktarıldığı üçüncü kişilere yukarıda sayılan (D) ve (E) bentleri uyarınca yapılan işlemlerin
+            bildirilmesini
+            isteme,</li>
+          <li>Münhasıran otomatik sistemler ile analiz edilmesi nedeniyle aleyhinize bir sonucun ortaya çıkmasına
+            itiraz etme,
+          </li>
+          <li>KVKK’ya aykırı olarak işlenmesi sebebiyle zarara uğramanız hâlinde zararın giderilmesini talep etme.
+          </li>
+        </ol>
+        <p class="padding-bottom-2">Müşterilerimizin kişisel verilerinin kullanılması konusunda çeşitli kanunlarda
+          düzenlemeler bulunmaktadır.
+          En başta KVKK
+          ile kişisel verilerin korunması esasları belirlenmiştir. Ayrıca 6563 Sayılı Elektronik Ticaretin
+          Düzenlenmesi Hakkında
+          Kanun da kişisel verilerin korunmasına ilişkin hüküm içermektedir. 5237 Sayılı Türk Ceza Kanunu hükümleri
+          yoluyla da
+          kişisel verilerin korunması için bazı hallerde cezai yaptırımlar öngörülmüştür. Diğer yandan, 6502 sayılı
+          Tüketicinin
+          Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği’nden doğan yükümlülüklerimizin ifası amacıyla
+          verilerin
+          toplanması ve kullanılması gerekmektedir.</p>
+      </div>
     </section>
 
     <!-- -------------------------------------------------------------------- -->
@@ -179,13 +226,11 @@
         })();
       </script>
     </section>
-
   </main>
 
   <!-- -------------------------------------------------------------------- -->
   <!-- FOOTER ------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-
   <footer class="container flex-113 padding-top-4">
     <section>
       <a href="/">
