--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
       Elektrikçi Yüksel Aykut - Tüm hakları saklıdır</small>
     <br>
     <small class="flex-align-center flex-justify-center gap-1 padding-vertical-2">
-      <a href="/gizlilik-politikasi" class="secondary">Gizlilik Politikası</a>
-      <a href="/site-haritasi" class="secondary">Site Haritası</a>
+      <a href="/gizlilik" class="secondary">Gizlilik Politikası</a>
+      <a href="/sitemap" class="secondary">Site Haritası</a>
     </small>
   </div>
 
