A content fix on /yuksel-aykut
Name of a project updated.

--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -208,7 +208,7 @@
       <details style="border: #ccc 1px solid; border-radius: 4px;">
         <summary role="button" class="contrast">Kare Mimarlık &amp; Mühendislik</summary>
         <ul id="istanbul-projeleri-3">
-          <li>Address Güneşi, Güneşli — 80 Konut</li>
+          <li>Address Güneşli, Güneşli — 80 Konut</li>
           <li>Koçak Konutları, Mahmutbey — 45 Konut</li>
         </ul>
       </details>
